<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/mainName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/cardview"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.269"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        app:cardBackgroundColor="#9C3E3C3C"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        app:cardBackgroundColor="#9C3E3C3C"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:elevation="4dp"
        android:visibility="invisible"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageWeather"
                android:layout_width="197dp"
                android:layout_height="93dp"
                app:srcCompat="@drawable/load"
                android:contentDescription="@string/icon" />
            <TextView
                android:id="@+id/description"
                android:textColor="#DBEFFA"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />
            <TextView
                android:id="@+id/temperature"
                android:textColor="#DBEFFA"
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/temperature" />

            <TextView
                android:textColor="#DBEFFA"
                android:id="@+id/pressure"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/pressure" />

            <TextView
                android:id="@+id/cloudiness"
                android:textColor="#DBEFFA"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/cloudiness" />

            <TextView
                android:id="@+id/humidity"
                android:textColor="#DBEFFA"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:textColor="#42A5F5"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/wind" />

            <TextView
                android:textColor="#DBEFFA"
                android:id="@+id/windSpeed"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/windSpeed" />

            <TextView
                android:textColor="#DBEFFA"
                android:id="@+id/windAngle"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windAngle" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="#3A3939"
        android:text="@string/search"
        android:textColor="#FFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cardview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>